[tool.poetry]
name = "lab-games-sampler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lab_games_sampler"}]

[tool.poetry.dependencies]
python = "^3.11"
arcade = "^2.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
